# euroleague_analysis

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  Steals.parquet  TotalRebounds.parquet  Turnovers.parquet  Valuation.parquet  analyze_pgm.py  check_columns.py  dvc.yaml  euroleague_data_collector.py  feature_engineering.py  feature_outputs.json  inspect_schema.py  model_config.py  params.yaml  pyproject.toml  requirements.txt  total_seconds.parquet  train_model.py  train_pgm.py  update_model.sh
analyse_datasets/: player_data.py
analysis/: .gitignore  analysis_results.json
analysis_pgm/: .gitignore  detailed_analysis.json
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
feature_engineering/: __init__.py  __main__.py  builder.py  config.py  database.py
feature_engineering/views/: base.py  stats.py
models/: .gitignore  feature_importance.json  metrics.json
models/plots/: .gitignore
models_pgm/: .gitignore  feature_importance.json  metadata.joblib  pgm_metrics.json  pgm_parameters.json  scalers.joblib
sql_queries/: rolling_stats.sql  shot_patterns.sql
src/euroleague_analysis/: __init__.py  analyze_pgm.py  analyze_predictions.py  euroleague_data_collector.py  model_config.py  predict_euroleague.py  predict_next_matches.py  predict_next_pir.py  team_player_mapping.py  train_model.py  train_pgm.py
src/euroleague_analysis/feature_engineering/: __init__.py  __main__.py  builder.py  config.py  database.py  pipeline.py
src/euroleague_analysis/feature_engineering/core/: base.py  registry.py
src/euroleague_analysis/feature_engineering/features/: combined_stats.py  matchups.py  playbyplay.py  shot_patterns.py
src/euroleague_analysis/features/: __init__.py
src/euroleague_analysis/sql_queries/: playbyplay_features.sql  position_matchup_features.sql  rolling_stats.sql  rolling_stats_optimized.sql  shot_patterns.sql
src/euroleauge_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+3 files in other folders)
