[project]
name = "euroleauge-analysis"
version = "0.1.0"
description = "Data analysis pipeline for Euroleague basketball"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "euroleague-api>=0.0.13",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "pyarrow>=18.1.0",
    "pymc>=5.19.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "dvc>=3.38.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "pytest>=7.4.3",
]
