[project]
name = "euroleauge-analysis"
version = "0.1.0"
description = "Data analysis pipeline for Euroleague basketball"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "euroleague-api>=0.0.13",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "pyarrow>=18.1.0",
    "pymc>=5.19.1",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "dvc>=3.38.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "pytest>=7.4.3",
]

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["euroleague_analysis"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
